--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Shopping cart</title>
+  </head>
+  
+  <body>
+    <form action="/checkout" method="post" 
+    <label for="cart">Cart:</label>
+     <input type="text" name="cart"> 
+    <label for="item">Item:</label>
+     <input id="item" type="text" name="Item">
+     
+    <label for="submit">Submit:</label>
+     <input type="submit" id="submit">
+     
+  </body>
+</html>
