--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,9 @@
+<h1>Hello!</h1>
 
+<form action="/checkout" method="POST">
+  
+  <label>Item</label>
+  <input type="text" name="item">
+  <input type="submit" value="submit">
+  
+</form>
