--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
+<form action="/checkout" method="post">
+  <p><label>Enter Item<input type="text" name="item"></label></p>
+  <button type="submit" value="submit">SUBMIT</button>
+</form>
 
+ 
