--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,15 @@
 
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>User Input</title>
+  </head>
+  <body>
+    <h1>Choose your item</h1>
+
+      <form action = "/checkout" method ="POST">
+        Enter your product: <input type="text" name="item">
+        <input type="submit" value="submit">
+      </form>
+  </body>
+</html>
