--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
+<h1> Amazonian Shopping</h1>
 
+<form method="post" action="/checkout">
+  <input type="text" name="item">
+  <input type="submit" value="submit">
+</form>
